--- a/client/src/app/components/admin-order/admin-order.component.html
+++ b/client/src/app/components/admin-order/admin-order.component.html
@@ -1,1 +1,16 @@
-<p>admin-order works!</p>
+<h1 class="titulo">Orden de compra</h1>
+<div class="contenedor">
+  <label for="filtro">Filtrar por referencia:</label>
+  <input type="text" id="filtro">
+  <div id="objeto">
+      <p><strong>Referencia:</strong></p>
+      <p><strong>Total de la orden:</strong></p>
+      <p><strong>Fecha de vencimiento:</strong></p>
+      <p><strong>EAN:</strong></p>
+      <p><strong>Estado:</strong></p>
+      <div class="button-container">
+          <button class="submit" type="submit">Crear</button>
+          <a routerLink="/login"><button class="submit">Regresar</button></a>
+      </div>
+  </div>
+</div>
