--- a/client/src/app/components/create-user/create-user.component.html
+++ b/client/src/app/components/create-user/create-user.component.html
@@ -1,5 +1,6 @@
 <body>
   <div class="background">
+    <h1>Crear Usuario</h1>
     <div class="container">
       <form [formGroup]="crearUser" class="form" (ngSubmit)="postForm(crearUser.value)" #myForm="ngForm"> 
         <label for="name">Nombre:</label>
