--- a/client/src/app/components/create-user/create-user.component.scss
+++ b/client/src/app/components/create-user/create-user.component.scss
@@ -3,6 +3,11 @@
   background-color: #ecaf81;
 }
 
+h1 {
+  margin-top: 0; /* Para evitar el margen predeterminado en algunos navegadores */
+  text-align: center;
+}
+
 $container-width: 400px;
 $form-background: #cbaff2;
 $form-border: 1px solid #ccc;
