--- a/client/src/app/components/admin-order/admin-order.component.scss
+++ b/client/src/app/components/admin-order/admin-order.component.scss
@@ -34,6 +34,18 @@
     text-decoration: none;
     transition: background-color 0.3s ease;
   }
+
+  .button-pay {
+    margin-top: 1rem;
+    padding: 0.5rem 1rem;
+    border-radius: 0.25rem;
+    border: none;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+  }
   
   .submit:hover {
     background-color: gray;
@@ -44,3 +56,12 @@
     justify-content: center;
   }
   
+  .button-pay {
+    
+    &:disabled {
+      cursor: not-allowed;
+      opacity: 0.5;
+      background-color: gray;
+      // Agrega cualquier otro estilo que desees aplicar al botón desactivado aquí
+    }
+  }
